--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ body {
 /* Home Section Styling */
 .home {
     height: 100vh; /* Full-screen section */
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/Assets/home.jpeg') center/cover no-repeat; /* Background image with overlay */
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('Assets/home.jpeg') center/cover no-repeat; /* Background image with overlay */
     display: flex;
     justify-content: center;
     align-items: center;
