--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('Assets/home.jpeg') center/cover no-repeat; /* Background image with overlay */
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/My-Creative-Space/Assets/home.jpeg') center/cover no-repeat; /* Background image with overlay */
     background-size: cover; /* Make sure the image covers the entire screen */
     background-position: center; /* Center the image */
     background-attachment: fixed; /* Keep the background fixed while scrolling */
