--- a/Contacts/contact.css
+++ b/Contacts/contact.css
@@ -1,4 +1,4 @@
-@import url('/style.css');
+@import url('/My-Creative-Space/style.css');
 
 /* General Contact Section Styles */
 .contact-section {
